2008-05-15  Paolo Bonzini  <bonzini@gnu.org>

	* bootstrap.sh.in: Define bool, true, false.  Reported by
	Jason Stover.  Adjust for gnulib changes.
	* bootstrap.sh: Regenerate.

2008-04-24  Paul Eggert  <eggert@twinsun.com>

	* sed/compile.c (match_slash): Treat 's&foo&\&&' compatibly with
	traditional 'sed'.
	* testsuite/bsd.sh: Add test case for this.
	* testsuite/bsd.good: Add test case output.

2008-04-24  Paolo Bonzini  <bonzini@gnu.org>

	* sed/compile.c (setup_replacement): Fix bug with \& in POSIX mode.

2008-01-16  Jim Meyering  <meyering@redhat.com>

	* sed/execute.c (open_next_file, get_backup_file_name): Avoid
	warnings from gcc.

2008-01-16  Jim Meyering  <meyering@redhat.com>

	* sed/compile.c (snarf_char_class): Reverse order of conjuncts
	so that "delim" is not used uninitialized.

2008-01-16  Jim Meyering  <meyering@redhat.com>

	* sed/utils.c (panic): Remove declaration of unused local, "fd".

2008-01-16  Jim Meyering  <meyering@redhat.com>

	* sed/execute.c (open_next_file, get_backup_file_name): Avoid
	warnings from gcc.  Avoid shadowing global "pipe".

2008-01-16  Jim Meyering  <meyering@redhat.com>

	* autoboot.conf (gnulib_modules): Add stat-macros and pathmax.

2007-10-25  Paolo Bonzini  <bonzini@gnu.org>
	    Mike Frysinger   <vapier@gentoo.org>

	* doc/sed.x (q, Q): Document argument.
	* configure.ac: Remove texi2html checks.
	* doc/Makefile.am: Remove rules for sed.html, always distribute it.

2007-08-14  Paolo Bonzini  <bonzini@gnu.org>

	* sed/execute.c (open_next_file): Follow symlink here...
	(closedown): ... not here.

2007-06-29  Paolo Bonzini  <bonzini@gnu.org>

	* sed/mbcs.c: Upgrade to GPLv3.
	* sed/regexp.c: Upgrade to GPLv3.
	* sed/sed.c: Upgrade to GPLv3.
	* sed/sed.h: Upgrade to GPLv3.
	* sed/utils.c: Upgrade to GPLv3.
	* sed/utils.h: Upgrade to GPLv3.
	* sed/compile.c: Upgrade to GPLv3.
	* sed/execute.c: Upgrade to GPLv3.
	* sed/fmt.c: Upgrade to GPLv3.

2007-03-01  Masatake YAMATO  <jet@gyve.org>  (tiny change)
