@@ -18,7 +18,7 @@
 
 # gnulib modules used by this package.
 gnulib_modules="
-    acl alloca getline getopt gettext memchr memcmp memmove
+    acl alloca extensions getline getopt gettext memchr memcmp memmove
     mkstemp obstack pathmax regex stdbool stat-macros
     strerror strverscmp unlocked-io verify"
 
