@@ -1,32 +1,0 @@
-# Copyright (C) 2004-2007 Free Software Foundation, Inc.
-#
-# This file is free software, distributed under the terms of the GNU
-# General Public License.  As a special exception to the GNU General
-# Public License, this file may be distributed as part of a program
-# that contains a configuration script generated by Autoconf, under
-# the same distribution terms as the rest of that program.
-#
-# Generated by gnulib-tool.
-#
-# This file represents the specification of how gnulib-tool is used.
-# It acts as a cache: It is written and read by gnulib-tool.
-# In projects using CVS, this file is meant to be stored in CVS,
-# like the configure.ac and various Makefile.am files.
-
-
-# Specification in the form of a command-line invocation:
-#   gnulib-tool --import --dir=. --lib=libsed --source-base=lib --m4-base=build-aux --doc-base=doc --aux-dir=build-aux --makefile-name=gnulib.mk --no-libtool --macro-prefix=gl acl alloca getline getopt gettext localcharset memchr memcmp memmove mkstemp obstack pathmax regex stat-macros stdbool strerror strverscmp unlocked-io verify
-
-# Specification in the form of a few gnulib-tool.m4 macro invocations:
-gl_LOCAL_DIR([])
-gl_MODULES([acl alloca getline getopt gettext localcharset memchr memcmp memmove mkstemp obstack pathmax regex stat-macros stdbool strerror strverscmp unlocked-io verify])
-gl_AVOID([])
-gl_SOURCE_BASE([lib])
-gl_M4_BASE([build-aux])
-gl_PO_BASE([])
-gl_DOC_BASE([doc])
-gl_TESTS_BASE([tests])
-gl_LIB([libsed])
-gl_MAKEFILE_NAME([gnulib.mk])
-gl_MACRO_PREFIX([gl])
-gl_PO_DOMAIN([])
