@@ -1,4 +1,5 @@
 *.po
+*.gmo
 .reference
 LINGUAS
 Makefile.in.in
